White space isuue fix

--- a/docroot/react/src/views/secure/visit/conference/conference.less
+++ b/docroot/react/src/views/secure/visit/conference/conference.less
@@ -552,7 +552,7 @@
         }
 
         .video-conference-container {
-            height: 100vh !important;
+            height: 100vh;
             overflow: hidden;
 
             .video-conference {
